After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 644973 - network: fix version compatibility warning dialog
network: fix version compatibility warning dialog
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-16 23:34 UTC by William Jon McCann
Modified: 2011-03-17 00:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
network: fix version compatibility warning dialog (5.28 KB, patch)
2011-03-16 23:35 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2011-03-16 23:34:58 UTC
The current version warning dialog doesn't set the correct parent window
and the text used is very jargon (even for something that isn't supposed to happen).
Comment 1 William Jon McCann 2011-03-16 23:35:00 UTC
Created attachment 183586 [details] [review]
network: fix version compatibility warning dialog

Make it use the correct parent window, improve the text, and
not block startup.
Comment 2 William Jon McCann 2011-03-17 00:48:01 UTC
Attachment 183586 [details] pushed as e1b1be1 - network: fix version compatibility warning dialog