network: fix version compatibility warning dialog

Make it use the correct parent window, improve the text, and
not block startup.

https://bugzilla.gnome.org/show_bug.cgi?id=644973